# AnkerMoveConsole_editors

./: .gitignore  ARCHITECTURE.md  BUILD_WINDOWS.md  CHANGELOG.md  CLAUDE.md  Doxyfile  GLOSSARY.md  README.md  install_mac.sh  install_windows.bat  update.md
.agent/workflows/: windows-sdk-version.md
.claude/: hookify.module-ui-guide.local.md  settings.local.json
.github/workflows/: build-command-logger.yml  build-windows.yml  build_windows.yml
SDK_TEMP/ae25.6_61.64bit.AfterEffectsSDK/Examples/: .gitignore
SDK_TEMP/ae25.6_61.64bit.AfterEffectsSDK/Examples/AEGP/FBIO/Win/: FBIO_PiPL.rc
SDK_TEMP/ae25.6_61.64bit.AfterEffectsSDK/Examples/AEGP/Mangler/Win/: Mangler_PiPL.rc
SDK_TEMP/ae25.6_61.64bit.AfterEffectsSDK/Examples/Headers/SP/: SPEDebug.c
ae-plugin-templates/: README.md
ae-plugin-templates/.guides/workflows/: gdi-include-order.md
ae-plugin-templates/cep-panel/: README.md  index.html
ae-plugin-templates/cep-panel/CSXS/: manifest.xml
ae-plugin-templates/cep-panel/css/: style.css
ae-plugin-templates/cep-panel/js/: main.js
ae-plugin-templates/cep-panel/jsx/: main.jsx
ae-plugin-templates/native-plugin/: BUILD_WINDOWS.md  README.md
ae-plugin-templates/native-plugin/.github/workflows/: build_windows.yml
ae-plugin-templates/native-plugin/cep/js/: CSInterface.js  grid.js  main.js
ae-plugin-templates/native-plugin/cep/jsx/: anchor.jsx
ae-plugin-templates/native-plugin/cpp/: CMakeLists.txt
ae-plugin-templates/native-plugin/cpp/resources/: AnchorRadialMenu_PiPL.r
ae-plugin-templates/native-plugin/cpp/resources/win/: AnchorRadialMenu.def
ae-plugin-templates/native-plugin/cpp/src/: KeyboardMonitor.cpp  KeyboardMonitor.h
ae-plugin-templates/script-only/: MyScript.jsx  README.md
cep/: index.html
cep/CSXS/: manifest.xml
cep/css/: style.css
cep/js/: custom-anchor.js  grid.js  i18n.js  main.js  settings.js
cep/js/core/: i18n.js  settings.js  tabs.js
cep/js/modules/grid/: custom-anchor.js  grid.js
cep/js/modules/layer/: actions.js
cep/jsx/: anchor.jsx  snap.jsx
cpp/: CMakeLists.txt  Info.plist
cpp/resources/: AnchorRadialMenu_PiPL.r  AnchorSnap_PiPL.r  SnapPlugin_PiPL.r
cpp/resources/win/: AnchorRadialMenu.rc  AnchorSnap.def  AnchorSnap.rc  SnapPlugin.def  SnapPlugin.rc
cpp/src/: AnchorRadialMenu.cpp  AnchorRadialMenu.h  CEPBridge.cpp  GdiPlusIncludes.h  KeyboardMonitor.cpp  KeyboardMonitor.h  NativeUI.cpp  NativeUI.h
cpp/src/core/: CEPBridge.cpp  CEPBridge.h  GdiPlusIncludes.h  KeyboardMonitor.cpp  KeyboardMonitor.h  SnapPlugin.cpp  SnapPlugin.h
cpp/src/modules/align/: AlignUI.cpp  AlignUI.h
cpp/src/modules/comp/: CompUI.cpp  CompUI.h
cpp/src/modules/control/: ControlUI.cpp  ControlUI.h
cpp/src/modules/dmenu/: DMenuUI.cpp  DMenuUI.h
cpp/src/modules/grid/: GridUI.cpp  GridUI.h
cpp/src/modules/keyframe/: KeyframeUI.cpp  KeyframeUI.h
cpp/src/modules/shape/: ShapeUI.cpp  ShapeUI.h
cpp/src/modules/text/: TextUI.cpp  TextUI.h
docs/: API_MAPPING.md  EC_RESEARCH.md  LAYER_MODULE_PLAN.md  MODULE_ANALYSIS_REPORT.md  MODULE_CLASSIFICATION.md  MODULE_FEATURES.md  SNAP_CONTROL_PLAN.md  TEXT_INPUT_HOOK_PREVENTION.md  dev-log-2025-12-18.md  flow-analysis.html  flowchart.html
docs/doxygen/html/: _align_u_i_8cpp.html  _align_u_i_8cpp.js  _align_u_i_8cpp__incl.map  _align_u_i_8cpp__incl.md5  _align_u_i_8cpp_source.html  _align_u_i_8h.html  _align_u_i_8h.js  _align_u_i_8h__dep__incl.map  _align_u_i_8h__dep__incl.md5  _align_u_i_8h_source.html  _c_e_p_bridge_8cpp.html  _c_e_p_bridge_8cpp.js  _c_e_p_bridge_8cpp__incl.map  _c_e_p_bridge_8cpp__incl.md5  _c_e_p_bridge_8cpp_source.html  _c_e_p_bridge_8h.html  _c_e_p_bridge_8h.js  _c_e_p_bridge_8h__dep__incl.map  _c_e_p_bridge_8h__dep__incl.md5  _c_e_p_bridge_8h__incl.map  _c_e_p_bridge_8h__incl.md5  _c_e_p_bridge_8h_source.html  _comp_u_i_8cpp.html  _comp_u_i_8cpp.js  _comp_u_i_8cpp__incl.map  _comp_u_i_8cpp__incl.md5  _comp_u_i_8cpp_source.html  _comp_u_i_8h.html  _comp_u_i_8h.js  _comp_u_i_8h__dep__incl.map  _comp_u_i_8h__dep__incl.md5  _comp_u_i_8h_source.html  _control_u_i_8cpp.html  _control_u_i_8cpp.js  _control_u_i_8cpp__incl.map  _control_u_i_8cpp__incl.md5  _control_u_i_8cpp_source.html  _control_u_i_8h.html  _control_u_i_8h.js  _control_u_i_8h__dep__incl.map  (+409 more)
docs/doxygen/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  defines_0.js  defines_1.js  enums_0.js  enums_1.js  enums_2.js  enums_3.js  enums_4.js  enums_5.js  enums_6.js  enums_7.js  enums_8.js  (+57 more)
docs/plans/: PLAN_NATIVE_API_REFACTORING.md
plugins/flowchart-generator/: plugin.json
plugins/flowchart-generator/agents/: code-analyzer.md
plugins/flowchart-generator/commands/: flowchart.md
plugins/flowchart-generator/skills/: flowchart-skill.md
plugins/flowchart-generator/templates/: flowchart-template.html
rust-poc/: .gitignore  Cargo.toml  README.md  build.rs
rust-poc/src/: hooks.rs  lib.rs  preset.rs  ui.rs
scripts/: ScriptRunner.jsx
scriptui/: AnchorGrid.jsx
tools/CommandLogger/: CMakeLists.txt  CommandLogger.cpp  CommandLogger.rc  CommandLogger_PiPL.r  README.md  build.bat
tools/flow-analyzer/: analyzer.py
